remove requirement for boost unit test runtime library.  test suite uses header-only version now.

--- a/configure.ac
+++ b/configure.ac
@@ -75,10 +75,10 @@ AC_LANG_SAVE
           AC_LANG_CPLUSPLUS
           AC_REQUIRE_CPP
           AC_CHECK_LIB(sequence, main,HAVELIBSEQ=1,[AC_MSG_WARN([libsequence runtime library does not seem to be here.  Example programs will not be compiled])])
-	  AC_CHECK_LIB(boost_unit_test_framework,main,BUNITTESTLIB=1,
-                   [AC_MSG_WARN([boost unit testing framework not found. Test suite will not be compiled.])])
+dnl	  AC_CHECK_LIB(boost_unit_test_framework,main,BUNITTESTLIB=1,
+dnl                   [AC_MSG_WARN([boost unit testing framework not found. Test suite will not be compiled.])])
 	  AM_CONDITIONAL([HAVE_LIBSEQ_RUNTIME], test x$HAVELIBSEQ = x1)
-	  AM_CONDITIONAL([BUNIT_TEST_LIB_PRESENT], test x$BUNITTESTLIB = x1)
+dnl	  AM_CONDITIONAL([BUNIT_TEST_LIB_PRESENT], test x$BUNITTESTLIB = x1)
 AC_LANG_RESTORE
 
 dnl AC_CONFIG_HEADER(config.h)
