--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,31 @@
 language: cpp
 
 sudo: false
+dist: trusty
 
 notifications:
-  email: false
-
-language: cpp
+    email: false
 
 compiler:
-  - gcc
-#  - clang
-
-install:
- - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
-# - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
+    - gcc
 
 addons:
-  apt:
-    sources:
-#    - llvm-toolchain-precise-3.6
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.9
-    - g++-4.9
-#    - clang-3.6
-    - zlib1g
-    - zlib1g-dev
-    - libboost-test-dev
-    - libgsl0-dev
-    - libgsl0ldbl
+    apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - gcc-5
+        - g++-5
+        - libgsl0-dev
+        - libgsl0ldbl
 
 before_script:
- ./install_libseq.sh
+    - export CXX=g++-5
+    - export CC=gcc-5
+    - ./install_libseq.sh
 
 script:
 # The LD_LIBRARY_PATH seems to be needed to get the clang linker to find libsequence b/c it is installed in $HOME
- - export LD_LIBRARY_PATH=$HOME/lib
- - ./configure --prefix=$HOME CXXFLAGS="-O2 -I$HOME/include" LDFLAGS="$LDFLAGS -L$HOME/lib" && make && make check && make install
- - ./unit/mutateTest
- - $HOME/bin/fwdppConfig --version
+    - export LD_LIBRARY_PATH=$HOME/lib
+    - ./configure --prefix=$HOME CXXFLAGS="-O2 -I$HOME/include" LDFLAGS="$LDFLAGS -L$HOME/lib" && make && make check && make install
+    - $HOME/bin/fwdppConfig --version
