details of matrix generation moved to separate header

--- a/fwdpp/sugar/Makefile.in
+++ b/fwdpp/sugar/Makefile.in
@@ -304,7 +304,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = singlepop metapop multiloc gsl poptypes sampling
-pkginclude_HEADERS = sugar.hpp serialization.hpp popbase.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp demography.hpp add_mutation.hpp change_neutral.hpp matrix.hpp
+pkginclude_HEADERS = sugar.hpp serialization.hpp popbase.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp demography.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
 all: all-recursive
 
 .SUFFIXES:
