--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,13 @@
 AC_PREREQ(2.59)
 
-AC_INIT([fwdpp], [0.5.4], [https://github.com/molpopgen/fwdpp])
+m4_define([FWDPP_MAJOR],0)
+m4_define([FWDPP_MINOR],5)
+m4_define([FWDPP_REVISION],4)
+AC_INIT([fwdpp], [FWDPP_MAJOR.FWDPP_MINOR.FWDPP_REVISION], [https://github.com/molpopgen/fwdpp])
+AC_DEFINE(FWDPP_MAJOR_VERSION,FWDPP_MAJOR,[Define major version number.])
+AC_DEFINE(FWDPP_MINOR_VERSION,FWDPP_MINOR,[Define major version number.])
+AC_DEFINE(FWDPP_REVISION_VERSION,FWDPP_REVISION,[Define major version number.])
+AC_DEFINE(FWDPP_VERSION_STRING,"FWDPP_MAJOR.FWDPP_MINOR.FWDPP_REVISION",[Define the version string.])
 AC_CONFIG_SRCDIR([fwdpp/diploid.hh])
 AC_CONFIG_SRCDIR([examples/diploid_ind.cc])
 AC_CONFIG_SRCDIR([experimental_examples/sex_limited_ind.cc])
