singlepop implementation mostly in place.  new unit test added and partially implemented for singlepop case (still missing complete exception checking)

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -15,7 +15,8 @@ unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
 	unit/sugar_add_mutationTest.cc \
 	unit/sugar_change_neutralTest.cc \
 	unit/sugar_generalmutTest.cc \
-	unit/sugar_generalmut_vecTest.cc
+	unit/sugar_generalmut_vecTest.cc \
+	unit/sugar_construct_pops.cc
 
 #Integration test targets:
 integration_sugar_integration_tests_SOURCES=integration/sugar_integration_tests.cc  integration/sugar_metapop_custom_diploidTest.cc  integration/sugar_metapopTest.cc  integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc integration/sugar_matrixTest.cc
