--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ matrix:
     include:
     - os: linux
       dist: trusty
-    - os: osx 
-      osx_image: xcode8.2
-    - os: osx 
-      osx_image: xcode8
-    - os: osx 
-      osx_image: xcode7.3
-    - os: osx 
-      osx_image: xcode6.4
+#     - os: osx 
+#       osx_image: xcode8.2
+#     - os: osx 
+#       osx_image: xcode8
+#     - os: osx 
+#       osx_image: xcode7.3
+#     - os: osx 
+#       osx_image: xcode6.4
 
 sudo: true
 
