attempt to farm off Travis duties to shell scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ matrix:
     include:
     - os: linux
       dist: trusty
+      env: USECONDA=1
 #     - os: osx 
 #       osx_image: xcode8.2
 #     - os: osx 
@@ -18,18 +19,8 @@ notifications:
     email: false
 
 install: 
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    # Useful for debugging any issues with conda
-    - conda info -a
-    - conda install gcc zlib boost
-    - conda install -c asmeurer gsl
-    - conda install -c bioconda libsequence
+    ./travis_scripts/installation_script.sh
+
 script:
     - export LD_LIBRARY_PATH=$HOME/miniconda/lib
     - export CPPFLAGS="-I$HOME/miniconda/include $CPPFLAGS"
