--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,9 @@ sudo: true
 notifications:
     email: false
 
+before_install:
+    - eval "${MATRIX_EVAL}"
+
 install: 
     ./travis_scripts/installation_script.sh
 
