--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,30 @@ matrix:
     include:
     - os: linux
       dist: trusty
+      env: USECONDA=1
+   # works on Precise and Trusty
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+
+    # works on Precise and Trusty
+    - os: linux
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 #     - os: osx 
 #       osx_image: xcode8.2
 #     - os: osx 
@@ -17,26 +41,14 @@ sudo: true
 notifications:
     email: false
 
+before_install:
+    - eval "${MATRIX_EVAL}"
+
 install: 
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    # Useful for debugging any issues with conda
-    - conda info -a
-    - conda install gcc zlib boost
-    - conda install -c asmeurer gsl
-    - conda install -c bioconda libsequence
+    ./travis_scripts/installation_script.sh
+
 script:
-    - export LD_LIBRARY_PATH=$HOME/miniconda/lib
-    - export CPPFLAGS="-I$HOME/miniconda/include $CPPFLAGS"
-    - export LDFLAGS="-L$HOME/miniconda/lib $LDFLAGS"
-    - LDFLAGS="-L$HOME/miniconda/lib -Wl,-rpath,$HOME/miniconda/lib" ./configure --prefix=$HOME && make &&  make install
-    - fwdppConfig --version
-    - make check
+    ./travis_scripts/build_script.sh
     #- if [ "$TRAVIS_OS_NAME" == "linux" ]; then make check; fi
     #For some reason, make check on OS X + conda fails to respect LD_LIBRARY_PATH,
     #so we'll run the tests manually
