--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ matrix:
     include:
     - os: linux
       dist: trusty
-      env: USECONDA=1
+      env: 
+         - CXXSTANDARD="c++11"
+         - USECONDA=1
    # works on Precise and Trusty
     - os: linux
       dist: trusty
@@ -15,6 +17,7 @@ matrix:
             - g++-5
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CXXSTANDARD="c++11"
 
     - os: linux
       dist: trusty
@@ -25,7 +28,8 @@ matrix:
           packages:
             - g++-5
       env:
-         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && STD=14"
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CXXSTANDARD="c++14"
 
    # works on Precise and Trusty
     - os: linux
@@ -38,6 +42,7 @@ matrix:
             - g++-6
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - CXXSTANDARD="c++11"
 
     # works on Precise and Trusty
     # - os: linux
